added a function for rolling the dice and show different dice faces

--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
       <div id="container">
         <div id="dice" class="dice">&#9860;</div>
         <button id="roll-dice-btn">Roll Dice</button>
-        <ul id="roll-history">
-          <li>Roll 1: <span>&#9860;</span></li>
-          <li>Roll 2: <span>&#9861;</span></li>
-        </ul>
+        <ul id="roll-history"></ul>
       </div>
     </main>
     <footer>
